[package]
name = "xylem"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }
bs58 = { version = "0.5", features = ["check"] }
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
